--- a/conf/application.yml
+++ b/conf/application.yml
@@ -1,10 +1,13 @@
 server:
-  port:1016
+  port:1018
 datasource:
-  driverName:mysql
+  driverName: mysql
   host: localhost
   port: 3306
   database: go_test
   username: root
   password:
   charset: utf8mb4
+redis:
+  addr: 127.0.0.1:6379
+  pwd:
